# socha-2022-rust

./: Cargo.toml  README.md
src/: main.rs
src/args/: client.rs
src/game/: board.rs  game_state.rs  mod.rs  move.rs  moves.rs  piece.rs  result.rs
src/logic/: logic.rs
src/networking/: manager.rs
src/protocol/: manager.rs  message.rs
src/util/: coordinates.rs  error.rs  logger_setup.rs  mod.rs
src/xml/: conversion.rs  enums.rs  mod.rs  serialization.rs
src/xml/data/: conversion.rs  enums.rs  mod.rs
src/xml/data/client/: data.rs
src/xml/data/server/: data.rs  mod.rs  result.rs  state.rs
src/xml/server/: data.rs  mod.rs  result.rs  state.rs
